syntax = "proto3";
package iodin;

message Request {
  enum Command {
    INVALID = 0;
    MDB_OPEN = 1;
    MDB_RESET = 2;
    MDB_TX = 3;
    STOP = 100;
  }

  uint32 version = 1;
  Command command = 2;
  uint32 timeout = 3;
  uint32 arg_uint = 4;
  bytes arg_bytes = 5;
}

message Response {
  enum Status {
    INVALID = 0;
    OK = 1;
    ERR_INPUT = 2;
    ERR_INTERNAL = 3;
    ERR_CHECKSUM = 4;
    ERR_TIMEOUT = 5;
    ERR_HARDWARE = 6;
  }

  uint32 version = 1;
  Status status = 2;
  string error = 3;
  bytes data_bytes = 4;
}
